--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         CURIOSIDADES DE TECNOLOGIA
        </h1>
        <h3> Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um unico lugar</h3>
-       <a href="">Home</a> <a href="">Notícias</a> <a href="">Curiosidades </a><a href="">Fale Conosco</a>
+       <a href="">Home</a> <a href="">Notícias</a> <a href="">Contato</a>
     </header>
 
     <main>
